Change ordering of nano_node wallet configuration parameters.